# pdf2skills

./: .env.example  .gitignore  CLAUDE.md  README.md  cursor2api.code-workspace  install.sh  pyproject.toml
.claude/skills/pdf2skills/: SKILL.md
.claude/skills/pdf2skills/prompts/: density-calibration.md  sku-extraction.md
skills/pdf2skills/: SKILL.md
skills/pdf2skills/prompts/: chunking.md  glossary-extraction.md  knowledge-fusion.md  router-generation.md  skill-generation.md
src/: cli.py
src/llm/: client.py
src/nlp/: density.py  similarity.py
src/output/: skill_formatter.py
src/pdf_parser/: base.py  claude_parser.py  llm_parser.py  mineru_parser.py
src/pipeline/: config.py  state.py
tests/: test_density.py  test_llm_client.py  test_llm_parser.py  test_pipeline.py  test_similarity.py
