[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2skills"
version = "2.1.0"
description = "Convert PDF or Markdown documents into Claude Code Skills via AI semantic analysis"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7",
    "jieba>=0.42",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "PyPDF2>=3.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
pdf2skills = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
